--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 python-multipart==0.0.9
+Pillow==10.4.0
 starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
